adjust height of subheader to prevent elements shifting due to type animation

--- a/src/Home.css
+++ b/src/Home.css
@@ -12,6 +12,7 @@
   flex-direction: column;
   align-items: center;
   font-size: 1.5em;
+  height: 4em;
 }
 
 #hero-subheader span {
